logs/taskwarrior-context-capsule.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blessings'...
Listing './lib/python3.5/site-packages/blessings-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/kitchen'...
Listing './lib/python3.5/site-packages/kitchen/collections'...
Listing './lib/python3.5/site-packages/kitchen/i18n'...
Listing './lib/python3.5/site-packages/kitchen/iterutils'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24/base64'...
Listing './lib/python3.5/site-packages/kitchen/pycompat24/sets'...
Listing './lib/python3.5/site-packages/kitchen/pycompat25'...
Listing './lib/python3.5/site-packages/kitchen/pycompat25/collections'...
Listing './lib/python3.5/site-packages/kitchen/pycompat27'...
Listing './lib/python3.5/site-packages/kitchen/pycompat27/subprocess'...
Listing './lib/python3.5/site-packages/kitchen/text'...
Listing './lib/python3.5/site-packages/kitchen/versioning'...
Listing './lib/python3.5/site-packages/kitchen-1.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/taskw'...
Listing './lib/python3.5/site-packages/taskw/fields'...
Listing './lib/python3.5/site-packages/taskw/test'...
Listing './lib/python3.5/site-packages/taskw/test/data'...
Listing './lib/python3.5/site-packages/taskw-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/taskwarrior_capsules'...
Listing './lib/python3.5/site-packages/taskwarrior_capsules/commands'...
Compiling './lib/python3.5/site-packages/taskwarrior_capsules/commands/main.py'...
***   File "./lib/python3.5/site-packages/taskwarrior_capsules/commands/main.py", line 27
    print "{t.bold}{t.blue}{headline}{t.normal}:".format(
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/taskwarrior_capsules-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/taskwarrior_context_capsule'...
Compiling './lib/python3.5/site-packages/taskwarrior_context_capsule/capsule.py'...
***   File "./lib/python3.5/site-packages/taskwarrior_context_capsule/capsule.py", line 64
    print '%s\t%s' % (context_name, context)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/taskwarrior_context_capsule-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/verlib-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
